# gmshAutoScripts

./: .gitignore  CMakeLists.txt  hangingMeshv1.cpp  hangingMeshv2.cpp
include/: gmshUtils.hpp
src/: dataUtils.py  dealii_laplace.cc  dealii_mixed.cc  dealii_poisson.cc  errorUtils.py  example-mixed-element-2d.jl  example-mixed-element-3d.jl  fileNameUtils.py  folderUtils.py  gmshConfGenerate.py  gmshUtils.cpp  gmshUtils.py  hangingMeshImport.cpp  hangingMeshSetOrder.cpp  hangingMeshv1.cpp  hangingMeshv2.cpp  hangingMeshv3.cpp  hangingMeshv4.cpp  hangingMeshv5.cpp  hangingMeshv6.cpp  hangingMeshv7.cpp  hangingMeshv8.cpp  leftEdgeHangingConfs.py  meshDataUtils.py  meshFileUtils.py  meshModify.py  miscUtils.py  nodeConfs.py  nodeConfsPV.py  output.vtu  processParaviewPlot.py  processplot.py  quadrefel_hanging.py  regexUtils.py  regularMeshv1.cpp  regularMeshv1.py  regularMeshv2.cpp  regularMeshv2.py  regularMeshv3.cpp  regularMeshv3.py  (+4 more)
